--- a/labs/scheduling/manifests/nginx_deployment.yaml
+++ b/labs/scheduling/manifests/nginx_deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
@@ -6,8 +6,8 @@ spec:
   selector:
     matchLabels:
       app: nginx
-  replicas: 3 
-  template: # create pods using pod definition in this template
+  replicas: 3
+  template:
     metadata:
       labels:
         app: nginx
