--- a/labs/scheduling/manifests/nginx_taint.yaml
+++ b/labs/scheduling/manifests/nginx_taint.yaml
@@ -1,24 +1,19 @@
-apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-taint
+  name: nginx-deployment-taint
 spec:
   selector:
     matchLabels:
-      app: nginx-taint
-  replicas: 3 
-  template: # create pods using pod definition in this template
+      app: nginx
+  replicas: 3
+  template:
     metadata:
       labels:
-        app: nginx-taint
+        app: nginx
     spec:
-      tolerations:
-      - key: "dedicated"
-        operator: "Equal"
-        value: "lab"
-        effect: "NoSchedule"
       containers:
-      - name: nginx-taint
+      - name: nginx
         image: nginx:1.7.9
         ports:
         - containerPort: 80
